<resources>
    <string name="app_name">lab1</string>
    <string name="textview_1">Test textview 1</string>
    <string name="image_test">image test</string>
    <string name="test_textview_2">test textview 2</string>
    <string name="textview">textView</string>
    <string name="button">Button</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="buton5">buton5</string>
    <string name="check">Check</string>
    <string name="on">On</string>
    <string name="off">Off</string>
</resources>