<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/textview_1"
        android:layout_weight="1"
         />

    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button3" />

    <ImageView
        android:id="@+id/imv_test"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/image_test" />
</LinearLayout>